--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@ Home
                     <strong><a href={{ '/discussion/' + discussionRow['id']|string  }}>{{ discussionRow['subject'] }}</a></strong><br>
                     <div class="d-flex justify-content-center row">
                         <div class = "d-flex justify-content-start discussionMetaStuff col-lg-2 thumbnailDiv">
-                            <img class = "thumbnailImage" alt="{{ discussionRow['displayName'] }}" src={{ "/static/avatars/" + discussionRow['profileImage'] }}>
+                            <img class = "thumbnailImage" alt="{{ discussionRow['displayName'] }}" src={{ "/static/avatars/" + discussionRow['profile_image'] }}>
                         </div>
                         <div class="col">
                             {{ discussionRow['displayName'] }}<br>
@@ -68,7 +68,7 @@ Home
                     </div>
                     <div class="d-flex justify-content-center row">
                         <div class = "d-flex justify-content-start articleMetaStuff col-lg-2 thumbnailDiv">
-                            <img class = "thumbnailImage" alt="{{ articleRow['displayName'] }}" src={{ "/static/avatars/" + articleRow['profileImage'] }}>
+                            <img class = "thumbnailImage" alt="{{ articleRow['displayName'] }}" src={{ "/static/avatars/" + articleRow['profile_image'] }}>
                         </div>
                         <div class="col">
                             <em>{{ articleRow['website'] }}</em><br>
@@ -107,7 +107,7 @@ Home
                 <div class="row mb-3 p-2 {{ loop.cycle('odd', 'even') }}">
                     <div  class="thumbnailDiv col-md-auto mx-auto d-flex justify-content-left">
                         <figure class = "thumbnailFigure">
-                            <img class = "thumbnailImage" alt={{ row['displayName'] }} src={{ "/static/avatars/" + row['profileImage'] }}>
+                            <img class = "thumbnailImage" alt={{ row['displayName'] }} src={{ "/static/avatars/" + row['profile_image'] }}>
                             <!--<figcaption class = "thumbnailFigcaption">{{ row["displayName"] }}</figcaption>-->
                         </figure>
                     </div>
