--- a/templates/articlesView.html
+++ b/templates/articlesView.html
@@ -23,10 +23,10 @@
         {% for articleRow in allArticlesList %}
         <div class="d-flex justify-content-center row">
             <div class = "d-flex justify-content-start articleMetaStuff col-lg-1 mt-3 thumbnailDiv">
-                <img class = "thumbnailImage" alt={{ articleRow['displayName'] }} src={{ "/static/avatars/" + articleRow['profileImage'] }}>
+                <img class = "thumbnailImage" alt="{{ articleRow['displayName'] }}" src="{{ '/static/avatars/' + articleRow['profile_image'] }}">
             </div>
             <div class="col-lg-3 mt-3">
-                <strong><a href="{{ "/person/" + articleRow['username'] }}">{{ articleRow['displayName'] }}</strong></a><br>
+                <strong><a href="{{ '/person/' + articleRow['username'] }}">{{ articleRow['displayName'] }}</strong></a><br>
                 {{ articleRow['dateTimeString'] }}
             </div>
             <div class="col-lg-1 mt-3">
@@ -38,11 +38,11 @@
             <div class="col-lg-5 mt-3">
                 {% if articleRow['age_ids'] or articleRow['challenge_ids'] or articleRow['gender_ids'] %}
                     <p>
-                    <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target='{{ "#aimedAtCollapse" + articleRow['id']|string }}' aria-expanded="false" aria-controls='{{ "#aimedAtCollapse" + articleRow['id']|string }}'>
+                    <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="{{ '#aimedAtCollapse' + articleRow['id']|string }}" aria-expanded="false" aria-controls="{{ '#aimedAtCollapse' + articleRow['id']|string }}">
                         aimed at:&nbsp;&nbsp;<i class="fas fa-caret-down"></i>
                     </button>
                     </p>
-                    <div class="collapse" id='{{ "aimedAtCollapse" + articleRow['id']|string }}'>
+                    <div class="collapse" id="{{ 'aimedAtCollapse' + articleRow['id']|string }}">
                         <div class="card card-body">
                         {% if articleRow['challenges'] %}
                             living with:
@@ -76,7 +76,7 @@
         <div class="d-flex justify-content-center titleAndImageWrapper row">
             {% if articleRow['ogImage'] %}
             <div class="my-4 col-lg-3 col-sm-6">
-                <img src='{{ articleRow['ogImage'] }}'>
+                <img src="{{ articleRow['og_image'] }}">
             </div>
             {% endif %}
             {% if articleRow['ogImage'] %}
@@ -89,12 +89,16 @@
                     {{ articleRow['website'] }} / {{ articleRow['publishedDateTimeString'] }}
                 </p>
                 <p>
-                    <a href={{'/article/' + articleRow['id']|string }} type="button" class="btn btn-sm btn-primary">Read more / Comment</a>
+                    <a href="{{'/article/' + articleRow['id']|string }}" type="button" class="btn btn-sm btn-primary">Read more / Comment</a>
                 </p>
             </div>
         </div>
         <hr>
         {% endfor %}
+    {% else %}
+        <div class="d-flex justify-content-center">
+            <em>No articles available to read.</em>
+        </div>
     {% endif %}
     <!--end articlesRows-->
     </div>
