Update all discussion routes, templates and JS file for postgresql

--- a/static/css/discussionsView.css
+++ b/static/css/discussionsView.css
@@ -8,6 +8,10 @@
     border-radius: 50%;
 }
 
+.thumbnailSquareDiv img {
+    max-height: 50px;
+}
+
 .discussionMetaStuff div {
     margin: 10px;
 }
