--- a/templates/discussionsView.html
+++ b/templates/discussionsView.html
@@ -23,10 +23,10 @@
         {% for discussionRow in allDiscussionsList %}
         <div class="d-flex justify-content-center row">
             <div class = "d-flex justify-content-start discussionMetaStuff col-lg-1 thumbnailDiv">
-                <img class = "thumbnailImage" alt={{ discussionRow['displayName'] }} src={{ "/static/avatars/" + discussionRow['profileImage'] }}>
+                <img class = "thumbnailImage" alt="{{ discussionRow['displayName'] }}" src="{{ '/static/avatars/' + discussionRow['profile_image'] }}">
             </div>
             <div class="col-lg-3">
-                <strong><a href="{{ "/person/" + discussionRow['username'] }}">{{ discussionRow['displayName'] }}</strong></a><br>
+                <strong><a href="{{ '/person/' + discussionRow['username'] }}">{{ discussionRow['displayName'] }}</strong></a><br>
                 {{ discussionRow['dateTimeString'] }}
             </div>
             <div class="col-lg-1">
@@ -38,11 +38,11 @@
             <div class="col-lg-5">
                 {% if discussionRow['age_ids'] or discussionRow['challenge_ids'] or discussionRow['gender_ids'] %}
                     <p>
-                    <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target='{{ "#aimedAtCollapse" + discussionRow['id']|string }}' aria-expanded="false" aria-controls='{{ "#aimedAtCollapse" + discussionRow['id']|string }}'>
+                    <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="{{ '#aimedAtCollapse' + discussionRow['id']|string }}" aria-expanded="false" aria-controls="{{ '#aimedAtCollapse' + discussionRow['id']|string }}">
                         aimed at:&nbsp;&nbsp;<i class="fas fa-caret-down"></i>
                     </button>
                     </p>
-                    <div class="collapse" id='{{ "aimedAtCollapse" + discussionRow['id']|string }}'>
+                    <div class="collapse" id="{{ 'aimedAtCollapse' + discussionRow['id']|string }}">
                         <div class="card card-body">
                         {% if discussionRow['challenges'] %}
                             living with:
@@ -70,32 +70,34 @@
                         {% endif %}
                         </div>
                     </div>
-
-
-
-
                 {% endif %}
             </div>
         </div>
         <div class="d-flex justify-content-center row">
-            <div class="my-4 col-lg-9">
+            <div class="my-2 col-lg-9">
                 <h3>{{ discussionRow['subject'] }}</h3>
             </div>
         </div>
         <div class="d-flex justify-content-center row">
-            <div class = "discussionWrapper col-lg-9">
-                <p>
-                {% if discussionRow['textContent']|length > 99 %}
-                    {{ discussionRow['textContent'][:97] + "..." }}
-                {% else %}
-                    {{ discussionRow['textContent'] }}
-                {% endif %}
-                </p>
+            <div class="my-2 col-lg-9 row">
                 {% if discussionRow['imageTagCode'] %}
-                    {{ discussionRow['imageTagCode']|safe }}
+                <div class = "col-lg-1 thumbnailSquareDiv">
+                    <img class = "thumbnailImage" src="{{ discussionRow['imageTagSrc']|safe }}">
+                </div>
                 {% endif %}
+                <div class="col">
+                    <p>
+                    {% if discussionRow['textContent']|length > 99 %}
+                        {{ discussionRow['textContent'][:97] + "..." }}
+                    {% else %}
+                        {{ discussionRow['textContent'] }}
+                    {% endif %}
+                    </p>
+                </div>
+            </div>
+            <div class="my-2 col-lg-9 row">
                 <p>
-                <a href={{'/discussion/' + discussionRow['id']|string }} type="button" class="btn btn-sm btn-primary">Read more / Comment</a>
+                    <a href="{{'/discussion/' + discussionRow['id']|string }}" type="button" class="btn btn-sm btn-primary">Read more / Comment</a>
                 </p>
             </div>
         </div>
