Update people routes, templates for postgres, and remove unused global nav placeholders

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,9 +63,9 @@
                       </a>
                     </li>
                     {% endif %}
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="#">Events</a>
-                    </li>
+                    </li> -->
                     {% if not userDict['id'] %}
                     <li class="nav-item">
                       <a class="nav-link active" href="/signin">Sign In</a>
@@ -80,7 +80,7 @@
                         <li><a class="dropdown-item" href="/emailReverify">Verify Email</a></li>
                         {% endif %}
                         <li><a class="dropdown-item" href="/profile">Profile</a></li>
-                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <!-- <li><a class="dropdown-item" href="#">Settings</a></li> -->
                         <li><a class="dropdown-item" href="/signout">Sign Out</a></li>
                       </ul>
                     </li>
