--- a/templates/signin.html
+++ b/templates/signin.html
@@ -20,7 +20,7 @@
         <div class="input-group mb-3">
           <input type="email" class="form-control" id="emailInput" name="email" required>
         </div>
-        <label for="emailInput">Password</label>
+        <label for="passwordInput">Password</label>
         <div class="input-group mb-3 d-flex align-items-center">
           <input type="password" class="form-control" id="passwordInput" name="password" required>
           <i class="fas fa-eye-slash" style="margin-left: -30px; cursor: pointer; z-index:5;" id="togglePassword" title="show/hide password"></i>
@@ -33,7 +33,7 @@
         <!--</div>-->
         <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Sign in</button>
       </form>
-      <p style="text-align:center;"><a href="#">Forgot / Reset password</a></p>
+      <p style="text-align:center;"><a href="/passwordreset1">Forgot / Reset password</a></p>
       <p style="text-align:center;">Not registered yet? <a href="/register">Do it now.</a></p>
     </main>
 </div>
